syntax = "proto3";

package pinch.v1;

option go_package = "github.com/pinch-protocol/pinch/gen/go/pinch/v1;pinchv1";

// MessageType enumerates all wire message types.
enum MessageType {
  MESSAGE_TYPE_UNSPECIFIED = 0;
  MESSAGE_TYPE_HANDSHAKE = 1;
  MESSAGE_TYPE_AUTH_CHALLENGE = 2;
  MESSAGE_TYPE_AUTH_RESPONSE = 3;
  MESSAGE_TYPE_MESSAGE = 4;
  MESSAGE_TYPE_DELIVERY_CONFIRM = 5;
  MESSAGE_TYPE_CONNECTION_REQUEST = 6;
  MESSAGE_TYPE_CONNECTION_RESPONSE = 7;
  MESSAGE_TYPE_HEARTBEAT = 8;
  MESSAGE_TYPE_AUTH_RESULT = 9;
  MESSAGE_TYPE_CONNECTION_REVOKE = 10;
  MESSAGE_TYPE_BLOCK_NOTIFICATION = 11;
  MESSAGE_TYPE_UNBLOCK_NOTIFICATION = 12;
  MESSAGE_TYPE_QUEUE_STATUS = 13;
  MESSAGE_TYPE_QUEUE_FULL = 14;
  MESSAGE_TYPE_RATE_LIMITED = 15;
}

// Envelope is the outer wire message. The relay can read this for routing
// but never sees the encrypted inner payload.
message Envelope {
  uint32 version = 1;
  string from_address = 2;
  string to_address = 3;
  MessageType type = 4;
  bytes message_id = 5;
  int64 timestamp = 6;

  oneof payload {
    EncryptedPayload encrypted = 10;
    Handshake handshake = 11;
    Heartbeat heartbeat = 12;
    AuthChallenge auth_challenge = 13;
    AuthResponse auth_response = 14;
    AuthResult auth_result = 15;
    ConnectionRequest connection_request = 16;
    ConnectionResponse connection_response = 17;
    ConnectionRevoke connection_revoke = 18;
    BlockNotification block_notification = 19;
    UnblockNotification unblock_notification = 20;
    DeliveryConfirm delivery_confirm = 21;
    QueueStatus queue_status = 22;
    QueueFull queue_full = 23;
    RateLimited rate_limited = 24;
  }
}

// EncryptedPayload is an opaque encrypted blob. The relay cannot read this.
message EncryptedPayload {
  bytes nonce = 1;
  bytes ciphertext = 2;
  bytes sender_public_key = 3;
}

// PlaintextPayload exists only in decrypted form at the client.
// Sequence and timestamp live inside the encryption boundary for
// replay protection (the relay cannot tamper with these fields).
message PlaintextPayload {
  uint32 version = 1;
  uint64 sequence = 2;
  int64 timestamp = 3;
  bytes content = 4;
  string content_type = 5;
}

// Handshake is sent during initial connection setup.
message Handshake {
  uint32 version = 1;
  bytes signing_key = 2;
  bytes encryption_key = 3;
}

// Heartbeat is a keep-alive message.
message Heartbeat {
  int64 timestamp = 1;
}

// AuthChallenge is sent by the relay on connect. The agent signs
// pinch-auth-v1\0<relay_host>\0<nonce> and returns AuthResponse.
message AuthChallenge {
  uint32 version = 1;
  bytes nonce = 2;
  int64 issued_at_ms = 3;
  int64 expires_at_ms = 4;
  string relay_host = 5;
}

// AuthResponse proves possession of the Ed25519 private key for the
// presented public key.
message AuthResponse {
  uint32 version = 1;
  bytes public_key = 2;
  bytes signature = 3;
  bytes nonce = 4;
}

// AuthResult is sent by the relay after verifying the AuthResponse.
message AuthResult {
  bool success = 1;
  string error_message = 2;    // only populated on failure
  string assigned_address = 3; // the pinch: address derived from pubkey
}

// ConnectionRequest is sent by an agent to request a connection with another agent.
message ConnectionRequest {
  string from_address = 1;
  string to_address = 2;
  string message = 3;             // free-text short message, max 280 chars enforced at application level
  bytes sender_public_key = 4;
  int64 expires_at = 5;           // Unix timestamp for 7-day TTL
}

// ConnectionResponse is the recipient's response to a ConnectionRequest.
message ConnectionResponse {
  string from_address = 1;
  string to_address = 2;
  bool accepted = 3;
  bytes responder_public_key = 4; // only populated if accepted
}

// ConnectionRevoke severs a connection between two agents without blocking.
message ConnectionRevoke {
  string from_address = 1;
  string to_address = 2;
}

// BlockNotification informs the relay that an agent has blocked another.
message BlockNotification {
  string blocker_address = 1;
  string blocked_address = 2;
}

// UnblockNotification informs the relay that an agent has unblocked another.
message UnblockNotification {
  string unblocker_address = 1;
  string unblocked_address = 2;
}

// DeliveryConfirm is an E2E signed delivery receipt sent by the recipient
// back to the sender to confirm message delivery.
message DeliveryConfirm {
  bytes message_id = 1;   // ID of the message being confirmed
  bytes signature = 2;    // Ed25519 detached signature of (message_id || timestamp)
  int64 timestamp = 3;    // confirmation timestamp
  string state = 4;       // delivery state (e.g., "delivered", "read_by_agent", "escalated_to_human")
  bool was_stored = 5;    // true if the message was queued (store-and-forward) and delivered later
}

// QueueStatus is sent by the relay to inform the agent of pending
// queued messages before starting a flush.
message QueueStatus {
  int32 pending_count = 1;
}

// QueueFull is sent to the sender when the recipient's message queue
// has reached its capacity and cannot accept more messages.
message QueueFull {
  string recipient_address = 1;
  string reason = 2;
}

// RateLimited is sent to the sender when their messages exceed the
// per-connection rate limit. Contains retry-after information.
message RateLimited {
  int64 retry_after_ms = 1;  // milliseconds until sender can retry
  string reason = 2;          // human-readable explanation
}
